--- a/ODK.Web.Razor/Pages/SuperAdmin/Icons.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/Icons.cshtml
@@ -23,7 +23,7 @@
                 <div class="d-flex justify-content-center m-2">
                     @await Html.PartialAsync("Components/_Icon", new IconViewModel(type))
                 </div>
-                <div class="d-flex justify-content-center small">
+                <div class="d-flex justify-content-center small m-2 mt-0">
                     @type.ToString()                    
                 </div>
             </div>
