(icons): allow for icons to be added to menu items

--- a/ODK.Web.Razor/Pages/Pricing.cshtml
+++ b/ODK.Web.Razor/Pages/Pricing.cshtml
@@ -18,6 +18,7 @@
     Content = await Html.PartialAsync("Pricing/_PricingContent", new PricingContentViewModel
     {
         CheckoutUrl = "",
+        CheckoutUrlPriceIdPlaceholder = "",
         SiteSubscriptions = siteSubscriptions
     }),
     Title = "Pricing"
