--- a/ODK.Web.Razor/Pages/SuperAdmin/Icons.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/Icons.cshtml
@@ -1,5 +1,6 @@
 ﻿@page "/superadmin/icons"
 @using Microsoft.AspNetCore.Authorization
+@using ODK.Web.Common.Components
 @using ODK.Web.Razor.Models.Components
 @attribute [Authorize]
 @model IconsModel
