--- a/ODK.Web.Razor/Views/Shared/Account/_ChapterAccountContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ChapterAccountContent.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ODK.Core.Extensions
 @using ODK.Services.Users.ViewModels
+@using ODK.Web.Common.Components
 @using ODK.Web.Common.Extensions
 @using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Account
