--- a/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventHeader.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventHeader.cshtml
@@ -1,6 +1,7 @@
 ﻿@using ODK.Core.Utils
 @using ODK.Core.Venues
 @using ODK.Services.Events.ViewModels
+@using ODK.Web.Common.Components
 @using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Components
 @model EventAdminPageViewModelBase
