--- a/ODK.Web.Razor/Views/Shared/Components/_GoogleLoginButton.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_GoogleLoginButton.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ODK.Services.Authentication.OAuth
+@using ODK.Web.Common.Components
 @using ODK.Web.Razor.Models.Components
 @model GoogleLoginButtonViewModel
 
