--- a/ODK.Web.Razor/Views/Shared/Events/_ListEventBody.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_ListEventBody.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ODK.Core.Events
 @using ODK.Core.Utils
+@using ODK.Web.Common.Components
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.Events
 @model ListEventViewModel
