--- a/ODK.Web.Razor/Views/Shared/Events/_ListEventTitle.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_ListEventTitle.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ODK.Core.Events
+@using ODK.Web.Common.Components
 @using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.Events
