--- a/ODK.Web.Razor/Views/Shared/Notifications/_NotificationList.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Notifications/_NotificationList.cshtml
@@ -1,10 +1,11 @@
 ﻿@using ODK.Core.Notifications
 @using ODK.Services.Caching
 @using ODK.Services.Notifications
+@using ODK.Services.Notifications.ViewModels
+@using ODK.Web.Common.Components
 @using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.Notifications;
-@using ODK.Services.Notifications.ViewModels
 @using ODK.Web.Razor.Pages.Chapters
 @model UnreadNotificationsViewModel
 @inject IRequestCache RequestCache
