--- a/ODK.Web.Razor/Views/Shared/Pricing/_PricingContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Pricing/_PricingContent.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ODK.Core.Subscriptions
 @using ODK.Services.Subscriptions.ViewModels
+@using ODK.Web.Common.Components
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.Pricing
 @model PricingContentViewModel
