--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailProviders.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailProviders.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ODK.Services.Settings
+@using ODK.Web.Common.Components
 @using ODK.Web.Common.Extensions
 @using ODK.Web.Razor.Models.Components
 @inject ISettingsService SettingsService
