--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_ErrorsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_ErrorsContent.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ODK.Core.Logging
 @using ODK.Services.Logging
+@using ODK.Web.Common.Components
 @using ODK.Web.Common.Extensions
 @using ODK.Web.Razor.Models.Components
 @inject ILoggingService LoggingService
