--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_FeaturesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_FeaturesContent.cshtml
@@ -1,8 +1,9 @@
-﻿@using ODK.Core.Emails
+﻿@using System.Web
+@using ODK.Core.Emails
 @using ODK.Services.Emails
 @using ODK.Services.Features
+@using ODK.Web.Common.Components
 @using ODK.Web.Common.Extensions
-@using System.Web
 @using ODK.Web.Razor.Models.Components
 @inject IFeatureService FeatureService
 @{
