--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_SubscriptionsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_SubscriptionsContent.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ODK.Services.Subscriptions
+@using ODK.Web.Common.Components
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Services
 @inject IRequestStore RequestStore
