--- a/ODK.Web.Razor/Views/Shared/Account/_AccountCreateForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_AccountCreateForm.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ODK.Core.Members
 @using ODK.Services.Users.ViewModels
+@using ODK.Web.Common.Components
 @using ODK.Web.Razor.Models.Account
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.Topics
