--- a/ODK.Web.Razor/Views/Shared/Account/_ChapterProfileForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ChapterProfileForm.cshtml
@@ -5,6 +5,7 @@
 @using ODK.Services.Chapters
 @using ODK.Services.Members
 @using ODK.Services.Users.ViewModels
+@using ODK.Web.Common.Components
 @using ODK.Web.Common.Extensions
 @using ODK.Web.Razor.Models.Account
 @using ODK.Web.Razor.Models.Components
