--- a/ODK.Web.Razor/Views/Shared/Components/_CopyToClipboard.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_CopyToClipboard.cshtml
@@ -1,4 +1,5 @@
-﻿@using ODK.Web.Razor.Models.Components
+﻿@using ODK.Web.Common.Components
+@using ODK.Web.Razor.Models.Components
 @model CopyToClipboardViewModel
 
 <span data-copy-to-clipboard="Model.Text"
