--- a/ODK.Web.Razor/Views/Shared/Components/_ExpandedListBox.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_ExpandedListBox.cshtml
@@ -1,4 +1,5 @@
-﻿@using ODK.Web.Razor.Models.Components
+﻿@using ODK.Web.Common.Components
+@using ODK.Web.Razor.Models.Components
 @model ExpandedListBoxViewModel
 @{
     var itemGroups = new List<KeyValuePair<SelectListGroup, List<SelectListItem>>>();
