--- a/ODK.Web.Razor/Views/Shared/Components/_Location.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_Location.cshtml
@@ -1,4 +1,5 @@
-﻿@using ODK.Web.Razor.Models.Components
+﻿@using ODK.Web.Common.Components
+@using ODK.Web.Razor.Models.Components
 @model string
 
 <div class="d-flex align-items-center gap-2">
