--- a/ODK.Web.Razor/Views/Shared/Components/_LocationPicker.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_LocationPicker.cshtml
@@ -1,4 +1,5 @@
-﻿@using ODK.Web.Razor.Models.Account
+﻿@using ODK.Web.Common.Components
+@using ODK.Web.Razor.Models.Account
 @using ODK.Web.Razor.Models.Components
 @model LocationFormViewModel
 
