--- a/ODK.Web.Razor/Views/Shared/Components/_UpgradeButton.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_UpgradeButton.cshtml
@@ -1,4 +1,5 @@
-﻿@using ODK.Web.Common.Routes
+﻿@using ODK.Web.Common.Components
+@using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Components
 @model UpgradeButtonViewModel
 
