--- a/ODK.Web.Razor/Views/Shared/Events/_EventResponseSummary.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventResponseSummary.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ODK.Core.Utils
+@using ODK.Web.Common.Components
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.Events
 
