--- a/ODK.Web.Razor/Views/Shared/Groups/_GroupCreateForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/_GroupCreateForm.cshtml
@@ -1,4 +1,5 @@
-﻿@using ODK.Web.Common.Extensions
+﻿@using ODK.Web.Common.Components
+@using ODK.Web.Common.Extensions
 @using ODK.Web.Razor.Models.Admin.Chapters
 @using ODK.Web.Razor.Models.Chapters
 @using ODK.Web.Razor.Models.Components
