--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_MessagesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_MessagesContent.cshtml
@@ -3,6 +3,7 @@
 @using ODK.Core.Utils
 @using ODK.Services
 @using ODK.Services.Contact.ViewModels
+@using ODK.Web.Common.Components
 @using ODK.Web.Common.Extensions
 @using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Components
