--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_SubscriptionContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_SubscriptionContent.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ODK.Services.Subscriptions.ViewModels
+@using ODK.Web.Common.Components
 @using ODK.Web.Common.Extensions;
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.SuperAdmin
