--- a/ODK.Web.Razor/Views/Shared/Topics/_TopicPicker.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Topics/_TopicPicker.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Html
+@using ODK.Web.Common.Components
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.Topics
 @model TopicPickerViewModel
