--- a/ODK.Web.Razor/Views/Shared/Groups/_GroupSearchForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/_GroupSearchForm.cshtml
@@ -33,7 +33,7 @@
 </div>
 <div class="form-group mb-3">
     <select name="c" class="form-select form-select-sm" data-select data-placeholder="Category">
-        <option data-placeholder="true"></option>
+        <option data-placeholder="true" value=""></option>
         @foreach (var topicGroup in Model.TopicGroups.OrderBy(x => x.Name))
         {
             <option selected="@(Model.TopicGroupId == topicGroup.Id ? "" : null)">
